Clean up config dependencies

--- a/notebooks/evaluation.ipynb
+++ b/notebooks/evaluation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "id": "7d7ab4e4",
    "metadata": {},
    "outputs": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "27e29059",
    "metadata": {},
    "outputs": [],
@@ -32,6 +32,8 @@
     "\n",
     "from sklearn.model_selection import TimeSeriesSplit\n",
     "\n",
+    "import sys\n",
+    "sys.path.append(\"../\")\n",
     "from src.data_loader import load_as_sales_data\n",
     "from src.data_features import build_features\n",
     "from src.model import cross_validate_model\n",
@@ -40,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "4548d7c5",
    "metadata": {},
    "outputs": [
@@ -50,17 +52,19 @@
        "((30, 12), (30, 7))"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "config_path = \"./best_config.yaml\"\n",
+    "config_path = \"../config.yaml\"\n",
     "with open(config_path) as f:\n",
     "        config = yaml.safe_load(f)\n",
     "\n",
-    "train_pl = load_as_sales_data(config[\"dataset_path\"])\n",
+    "#TODO: validate config\n",
+    "\n",
+    "train_pl = load_as_sales_data(\"../\"+config[\"dataset_path\"])\n",
     "\n",
     "X, Y = build_features(train_pl, config)\n",
     "X.shape, Y.shape"
@@ -68,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "id": "1f089817",
    "metadata": {},
    "outputs": [
@@ -100,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "id": "0e8f6254",
    "metadata": {},
    "outputs": [
@@ -113,7 +117,7 @@
        " 'AVG': {'RMSE': 1392.983766559044, 'MAPE': 2.261389633822744}}"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -127,7 +131,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "id": "9a50f26d",
    "metadata": {},
    "outputs": [
@@ -140,7 +144,7 @@
        " 'AVG': {'RMSE': 596.3259211939858, 'MAPE': 0.15934312335728038}}"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -153,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "id": "fbd0f748",
    "metadata": {},
    "outputs": [
@@ -166,7 +170,7 @@
        " 'AVG': {'RMSE': 296.19696108195825, 'MAPE': 0.0907124020763344}}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -178,7 +182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "id": "3c1ace5d",
    "metadata": {},
    "outputs": [
