Ensure notebooks still run after clean-up

--- a/notebooks/quick_EDA.ipynb
+++ b/notebooks/quick_EDA.ipynb
@@ -13,19 +13,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "0b45d408",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -65,21 +56,21 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (5, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>DATE</th><th>TOTAL_WASTE</th><th>TOTAL_DONATION</th><th>TOTAL_SOLD</th><th>TOTAL_TRANSFER</th><th>TOTAL_SET TO SALE</th></tr><tr><td>date</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>2025-01-02</td><td>null</td><td>null</td><td>null</td><td>null</td><td>916</td></tr><tr><td>2025-01-03</td><td>null</td><td>null</td><td>-508</td><td>null</td><td>762</td></tr><tr><td>2025-01-04</td><td>null</td><td>null</td><td>-221</td><td>null</td><td>null</td></tr><tr><td>2025-01-05</td><td>null</td><td>null</td><td>-267</td><td>null</td><td>10752</td></tr><tr><td>2025-01-06</td><td>-215</td><td>-196</td><td>-3907</td><td>null</td><td>3404</td></tr></tbody></table></div>"
+       "<small>shape: (5, 6)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>DATE</th><th>TOTAL_TRANSFER</th><th>TOTAL_SET TO SALE</th><th>TOTAL_SOLD</th><th>TOTAL_DONATION</th><th>TOTAL_WASTE</th></tr><tr><td>date</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>2025-01-02</td><td>null</td><td>916</td><td>null</td><td>null</td><td>null</td></tr><tr><td>2025-01-03</td><td>null</td><td>762</td><td>-508</td><td>null</td><td>null</td></tr><tr><td>2025-01-04</td><td>null</td><td>null</td><td>-221</td><td>null</td><td>null</td></tr><tr><td>2025-01-05</td><td>null</td><td>10752</td><td>-267</td><td>null</td><td>null</td></tr><tr><td>2025-01-06</td><td>null</td><td>3404</td><td>-3907</td><td>-196</td><td>-215</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (5, 6)\n",
-       "┌────────────┬─────────────┬────────────────┬────────────┬────────────────┬───────────────────┐\n",
-       "│ DATE       ┆ TOTAL_WASTE ┆ TOTAL_DONATION ┆ TOTAL_SOLD ┆ TOTAL_TRANSFER ┆ TOTAL_SET TO SALE │\n",
-       "│ ---        ┆ ---         ┆ ---            ┆ ---        ┆ ---            ┆ ---               │\n",
-       "│ date       ┆ i64         ┆ i64            ┆ i64        ┆ i64            ┆ i64               │\n",
-       "╞════════════╪═════════════╪════════════════╪════════════╪════════════════╪═══════════════════╡\n",
-       "│ 2025-01-02 ┆ null        ┆ null           ┆ null       ┆ null           ┆ 916               │\n",
-       "│ 2025-01-03 ┆ null        ┆ null           ┆ -508       ┆ null           ┆ 762               │\n",
-       "│ 2025-01-04 ┆ null        ┆ null           ┆ -221       ┆ null           ┆ null              │\n",
-       "│ 2025-01-05 ┆ null        ┆ null           ┆ -267       ┆ null           ┆ 10752             │\n",
-       "│ 2025-01-06 ┆ -215        ┆ -196           ┆ -3907      ┆ null           ┆ 3404              │\n",
-       "└────────────┴─────────────┴────────────────┴────────────┴────────────────┴───────────────────┘"
+       "┌────────────┬────────────────┬───────────────────┬────────────┬────────────────┬─────────────┐\n",
+       "│ DATE       ┆ TOTAL_TRANSFER ┆ TOTAL_SET TO SALE ┆ TOTAL_SOLD ┆ TOTAL_DONATION ┆ TOTAL_WASTE │\n",
+       "│ ---        ┆ ---            ┆ ---               ┆ ---        ┆ ---            ┆ ---         │\n",
+       "│ date       ┆ i64            ┆ i64               ┆ i64        ┆ i64            ┆ i64         │\n",
+       "╞════════════╪════════════════╪═══════════════════╪════════════╪════════════════╪═════════════╡\n",
+       "│ 2025-01-02 ┆ null           ┆ 916               ┆ null       ┆ null           ┆ null        │\n",
+       "│ 2025-01-03 ┆ null           ┆ 762               ┆ -508       ┆ null           ┆ null        │\n",
+       "│ 2025-01-04 ┆ null           ┆ null              ┆ -221       ┆ null           ┆ null        │\n",
+       "│ 2025-01-05 ┆ null           ┆ 10752             ┆ -267       ┆ null           ┆ null        │\n",
+       "│ 2025-01-06 ┆ null           ┆ 3404              ┆ -3907      ┆ -196           ┆ -215        │\n",
+       "└────────────┴────────────────┴───────────────────┴────────────┴────────────────┴─────────────┘"
       ]
      },
      "execution_count": 3,
@@ -114,27 +105,27 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (9, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>statistic</th><th>DATE</th><th>TOTAL_WASTE</th><th>TOTAL_DONATION</th><th>TOTAL_SOLD</th><th>TOTAL_TRANSFER</th><th>TOTAL_SET TO SALE</th></tr><tr><td>str</td><td>str</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;count&quot;</td><td>&quot;226&quot;</td><td>219.0</td><td>183.0</td><td>225.0</td><td>26.0</td><td>191.0</td></tr><tr><td>&quot;null_count&quot;</td><td>&quot;0&quot;</td><td>7.0</td><td>43.0</td><td>1.0</td><td>200.0</td><td>35.0</td></tr><tr><td>&quot;mean&quot;</td><td>&quot;2025-04-24 12:00:00&quot;</td><td>-550.570776</td><td>-70.863388</td><td>-2824.124444</td><td>-26.192308</td><td>4402.659686</td></tr><tr><td>&quot;std&quot;</td><td>null</td><td>695.269652</td><td>117.032812</td><td>1745.79402</td><td>36.923726</td><td>3415.275505</td></tr><tr><td>&quot;min&quot;</td><td>&quot;2025-01-02&quot;</td><td>-2291.0</td><td>-691.0</td><td>-5157.0</td><td>-140.0</td><td>396.0</td></tr><tr><td>&quot;25%&quot;</td><td>&quot;2025-02-27&quot;</td><td>-1006.0</td><td>-93.0</td><td>-4187.0</td><td>-31.0</td><td>2118.0</td></tr><tr><td>&quot;50%&quot;</td><td>&quot;2025-04-25&quot;</td><td>-209.0</td><td>-14.0</td><td>-3689.0</td><td>-7.0</td><td>3477.0</td></tr><tr><td>&quot;75%&quot;</td><td>&quot;2025-06-20&quot;</td><td>-44.0</td><td>-5.0</td><td>-413.0</td><td>-3.0</td><td>4965.0</td></tr><tr><td>&quot;max&quot;</td><td>&quot;2025-08-15&quot;</td><td>-1.0</td><td>-1.0</td><td>-204.0</td><td>-1.0</td><td>12701.0</td></tr></tbody></table></div>"
+       "<small>shape: (9, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>statistic</th><th>DATE</th><th>TOTAL_TRANSFER</th><th>TOTAL_SET TO SALE</th><th>TOTAL_SOLD</th><th>TOTAL_DONATION</th><th>TOTAL_WASTE</th></tr><tr><td>str</td><td>str</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td><td>f64</td></tr></thead><tbody><tr><td>&quot;count&quot;</td><td>&quot;226&quot;</td><td>26.0</td><td>191.0</td><td>225.0</td><td>183.0</td><td>219.0</td></tr><tr><td>&quot;null_count&quot;</td><td>&quot;0&quot;</td><td>200.0</td><td>35.0</td><td>1.0</td><td>43.0</td><td>7.0</td></tr><tr><td>&quot;mean&quot;</td><td>&quot;2025-04-24 12:00:00&quot;</td><td>-26.192308</td><td>4402.659686</td><td>-2824.124444</td><td>-70.863388</td><td>-550.570776</td></tr><tr><td>&quot;std&quot;</td><td>null</td><td>36.923726</td><td>3415.275505</td><td>1745.79402</td><td>117.032812</td><td>695.269652</td></tr><tr><td>&quot;min&quot;</td><td>&quot;2025-01-02&quot;</td><td>-140.0</td><td>396.0</td><td>-5157.0</td><td>-691.0</td><td>-2291.0</td></tr><tr><td>&quot;25%&quot;</td><td>&quot;2025-02-27&quot;</td><td>-31.0</td><td>2118.0</td><td>-4187.0</td><td>-93.0</td><td>-1006.0</td></tr><tr><td>&quot;50%&quot;</td><td>&quot;2025-04-25&quot;</td><td>-7.0</td><td>3477.0</td><td>-3689.0</td><td>-14.0</td><td>-209.0</td></tr><tr><td>&quot;75%&quot;</td><td>&quot;2025-06-20&quot;</td><td>-3.0</td><td>4965.0</td><td>-413.0</td><td>-5.0</td><td>-44.0</td></tr><tr><td>&quot;max&quot;</td><td>&quot;2025-08-15&quot;</td><td>-1.0</td><td>12701.0</td><td>-204.0</td><td>-1.0</td><td>-1.0</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (9, 7)\n",
-       "┌────────────┬──────────────┬─────────────┬──────────────┬─────────────┬─────────────┬─────────────┐\n",
-       "│ statistic  ┆ DATE         ┆ TOTAL_WASTE ┆ TOTAL_DONATI ┆ TOTAL_SOLD  ┆ TOTAL_TRANS ┆ TOTAL_SET   │\n",
-       "│ ---        ┆ ---          ┆ ---         ┆ ON           ┆ ---         ┆ FER         ┆ TO SALE     │\n",
-       "│ str        ┆ str          ┆ f64         ┆ ---          ┆ f64         ┆ ---         ┆ ---         │\n",
-       "│            ┆              ┆             ┆ f64          ┆             ┆ f64         ┆ f64         │\n",
-       "╞════════════╪══════════════╪═════════════╪══════════════╪═════════════╪═════════════╪═════════════╡\n",
-       "│ count      ┆ 226          ┆ 219.0       ┆ 183.0        ┆ 225.0       ┆ 26.0        ┆ 191.0       │\n",
-       "│ null_count ┆ 0            ┆ 7.0         ┆ 43.0         ┆ 1.0         ┆ 200.0       ┆ 35.0        │\n",
-       "│ mean       ┆ 2025-04-24   ┆ -550.570776 ┆ -70.863388   ┆ -2824.12444 ┆ -26.192308  ┆ 4402.659686 │\n",
-       "│            ┆ 12:00:00     ┆             ┆              ┆ 4           ┆             ┆             │\n",
-       "│ std        ┆ null         ┆ 695.269652  ┆ 117.032812   ┆ 1745.79402  ┆ 36.923726   ┆ 3415.275505 │\n",
-       "│ min        ┆ 2025-01-02   ┆ -2291.0     ┆ -691.0       ┆ -5157.0     ┆ -140.0      ┆ 396.0       │\n",
-       "│ 25%        ┆ 2025-02-27   ┆ -1006.0     ┆ -93.0        ┆ -4187.0     ┆ -31.0       ┆ 2118.0      │\n",
-       "│ 50%        ┆ 2025-04-25   ┆ -209.0      ┆ -14.0        ┆ -3689.0     ┆ -7.0        ┆ 3477.0      │\n",
-       "│ 75%        ┆ 2025-06-20   ┆ -44.0       ┆ -5.0         ┆ -413.0      ┆ -3.0        ┆ 4965.0      │\n",
-       "│ max        ┆ 2025-08-15   ┆ -1.0        ┆ -1.0         ┆ -204.0      ┆ -1.0        ┆ 12701.0     │\n",
-       "└────────────┴──────────────┴─────────────┴──────────────┴─────────────┴─────────────┴─────────────┘"
+       "┌────────────┬──────────────┬──────────────┬─────────────┬─────────────┬─────────────┬─────────────┐\n",
+       "│ statistic  ┆ DATE         ┆ TOTAL_TRANSF ┆ TOTAL_SET   ┆ TOTAL_SOLD  ┆ TOTAL_DONAT ┆ TOTAL_WASTE │\n",
+       "│ ---        ┆ ---          ┆ ER           ┆ TO SALE     ┆ ---         ┆ ION         ┆ ---         │\n",
+       "│ str        ┆ str          ┆ ---          ┆ ---         ┆ f64         ┆ ---         ┆ f64         │\n",
+       "│            ┆              ┆ f64          ┆ f64         ┆             ┆ f64         ┆             │\n",
+       "╞════════════╪══════════════╪══════════════╪═════════════╪═════════════╪═════════════╪═════════════╡\n",
+       "│ count      ┆ 226          ┆ 26.0         ┆ 191.0       ┆ 225.0       ┆ 183.0       ┆ 219.0       │\n",
+       "│ null_count ┆ 0            ┆ 200.0        ┆ 35.0        ┆ 1.0         ┆ 43.0        ┆ 7.0         │\n",
+       "│ mean       ┆ 2025-04-24   ┆ -26.192308   ┆ 4402.659686 ┆ -2824.12444 ┆ -70.863388  ┆ -550.570776 │\n",
+       "│            ┆ 12:00:00     ┆              ┆             ┆ 4           ┆             ┆             │\n",
+       "│ std        ┆ null         ┆ 36.923726    ┆ 3415.275505 ┆ 1745.79402  ┆ 117.032812  ┆ 695.269652  │\n",
+       "│ min        ┆ 2025-01-02   ┆ -140.0       ┆ 396.0       ┆ -5157.0     ┆ -691.0      ┆ -2291.0     │\n",
+       "│ 25%        ┆ 2025-02-27   ┆ -31.0        ┆ 2118.0      ┆ -4187.0     ┆ -93.0       ┆ -1006.0     │\n",
+       "│ 50%        ┆ 2025-04-25   ┆ -7.0         ┆ 3477.0      ┆ -3689.0     ┆ -14.0       ┆ -209.0      │\n",
+       "│ 75%        ┆ 2025-06-20   ┆ -3.0         ┆ 4965.0      ┆ -413.0      ┆ -5.0        ┆ -44.0       │\n",
+       "│ max        ┆ 2025-08-15   ┆ -1.0         ┆ 12701.0     ┆ -204.0      ┆ -1.0        ┆ -1.0        │\n",
+       "└────────────┴──────────────┴──────────────┴─────────────┴─────────────┴─────────────┴─────────────┘"
       ]
      },
      "execution_count": 4,
@@ -400,26 +391,26 @@
        "  white-space: pre-wrap;\n",
        "}\n",
        "</style>\n",
-       "<small>shape: (9, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>DATE</th><th>TOTAL_WASTE</th><th>TOTAL_DONATION</th><th>TOTAL_SOLD</th><th>TOTAL_TRANSFER</th><th>TOTAL_SET TO SALE</th><th>WEEKDAY</th></tr><tr><td>date</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>2025-01-03</td><td>null</td><td>null</td><td>-508</td><td>null</td><td>762</td><td>4</td></tr><tr><td>2025-04-18</td><td>-29</td><td>null</td><td>-340</td><td>null</td><td>null</td><td>4</td></tr><tr><td>2025-04-21</td><td>-626</td><td>-27</td><td>-204</td><td>null</td><td>11121</td><td>0</td></tr><tr><td>2025-05-01</td><td>-605</td><td>-139</td><td>-2027</td><td>null</td><td>1943</td><td>3</td></tr><tr><td>2025-05-29</td><td>-34</td><td>-3</td><td>-372</td><td>null</td><td>1036</td><td>3</td></tr><tr><td>2025-05-30</td><td>-441</td><td>-24</td><td>-1095</td><td>null</td><td>1309</td><td>4</td></tr><tr><td>2025-06-09</td><td>-489</td><td>-6</td><td>-290</td><td>null</td><td>10434</td><td>0</td></tr><tr><td>2025-08-01</td><td>-19</td><td>-1</td><td>-421</td><td>null</td><td>null</td><td>4</td></tr><tr><td>2025-08-15</td><td>-154</td><td>-145</td><td>-318</td><td>-2</td><td>null</td><td>4</td></tr></tbody></table></div>"
+       "<small>shape: (9, 7)</small><table border=\"1\" class=\"dataframe\"><thead><tr><th>DATE</th><th>TOTAL_TRANSFER</th><th>TOTAL_SET TO SALE</th><th>TOTAL_SOLD</th><th>TOTAL_DONATION</th><th>TOTAL_WASTE</th><th>WEEKDAY</th></tr><tr><td>date</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td><td>i64</td></tr></thead><tbody><tr><td>2025-01-03</td><td>null</td><td>762</td><td>-508</td><td>null</td><td>null</td><td>4</td></tr><tr><td>2025-04-18</td><td>null</td><td>null</td><td>-340</td><td>null</td><td>-29</td><td>4</td></tr><tr><td>2025-04-21</td><td>null</td><td>11121</td><td>-204</td><td>-27</td><td>-626</td><td>0</td></tr><tr><td>2025-05-01</td><td>null</td><td>1943</td><td>-2027</td><td>-139</td><td>-605</td><td>3</td></tr><tr><td>2025-05-29</td><td>null</td><td>1036</td><td>-372</td><td>-3</td><td>-34</td><td>3</td></tr><tr><td>2025-05-30</td><td>null</td><td>1309</td><td>-1095</td><td>-24</td><td>-441</td><td>4</td></tr><tr><td>2025-06-09</td><td>null</td><td>10434</td><td>-290</td><td>-6</td><td>-489</td><td>0</td></tr><tr><td>2025-08-01</td><td>null</td><td>null</td><td>-421</td><td>-1</td><td>-19</td><td>4</td></tr><tr><td>2025-08-15</td><td>-2</td><td>null</td><td>-318</td><td>-145</td><td>-154</td><td>4</td></tr></tbody></table></div>"
       ],
       "text/plain": [
        "shape: (9, 7)\n",
-       "┌────────────┬─────────────┬────────────────┬────────────┬───────────────┬───────────────┬─────────┐\n",
-       "│ DATE       ┆ TOTAL_WASTE ┆ TOTAL_DONATION ┆ TOTAL_SOLD ┆ TOTAL_TRANSFE ┆ TOTAL_SET TO  ┆ WEEKDAY │\n",
-       "│ ---        ┆ ---         ┆ ---            ┆ ---        ┆ R             ┆ SALE          ┆ ---     │\n",
-       "│ date       ┆ i64         ┆ i64            ┆ i64        ┆ ---           ┆ ---           ┆ i64     │\n",
-       "│            ┆             ┆                ┆            ┆ i64           ┆ i64           ┆         │\n",
-       "╞════════════╪═════════════╪════════════════╪════════════╪═══════════════╪═══════════════╪═════════╡\n",
-       "│ 2025-01-03 ┆ null        ┆ null           ┆ -508       ┆ null          ┆ 762           ┆ 4       │\n",
-       "│ 2025-04-18 ┆ -29         ┆ null           ┆ -340       ┆ null          ┆ null          ┆ 4       │\n",
-       "│ 2025-04-21 ┆ -626        ┆ -27            ┆ -204       ┆ null          ┆ 11121         ┆ 0       │\n",
-       "│ 2025-05-01 ┆ -605        ┆ -139           ┆ -2027      ┆ null          ┆ 1943          ┆ 3       │\n",
-       "│ 2025-05-29 ┆ -34         ┆ -3             ┆ -372       ┆ null          ┆ 1036          ┆ 3       │\n",
-       "│ 2025-05-30 ┆ -441        ┆ -24            ┆ -1095      ┆ null          ┆ 1309          ┆ 4       │\n",
-       "│ 2025-06-09 ┆ -489        ┆ -6             ┆ -290       ┆ null          ┆ 10434         ┆ 0       │\n",
-       "│ 2025-08-01 ┆ -19         ┆ -1             ┆ -421       ┆ null          ┆ null          ┆ 4       │\n",
-       "│ 2025-08-15 ┆ -154        ┆ -145           ┆ -318       ┆ -2            ┆ null          ┆ 4       │\n",
-       "└────────────┴─────────────┴────────────────┴────────────┴───────────────┴───────────────┴─────────┘"
+       "┌────────────┬────────────────┬───────────────┬────────────┬───────────────┬─────────────┬─────────┐\n",
+       "│ DATE       ┆ TOTAL_TRANSFER ┆ TOTAL_SET TO  ┆ TOTAL_SOLD ┆ TOTAL_DONATIO ┆ TOTAL_WASTE ┆ WEEKDAY │\n",
+       "│ ---        ┆ ---            ┆ SALE          ┆ ---        ┆ N             ┆ ---         ┆ ---     │\n",
+       "│ date       ┆ i64            ┆ ---           ┆ i64        ┆ ---           ┆ i64         ┆ i64     │\n",
+       "│            ┆                ┆ i64           ┆            ┆ i64           ┆             ┆         │\n",
+       "╞════════════╪════════════════╪═══════════════╪════════════╪═══════════════╪═════════════╪═════════╡\n",
+       "│ 2025-01-03 ┆ null           ┆ 762           ┆ -508       ┆ null          ┆ null        ┆ 4       │\n",
+       "│ 2025-04-18 ┆ null           ┆ null          ┆ -340       ┆ null          ┆ -29         ┆ 4       │\n",
+       "│ 2025-04-21 ┆ null           ┆ 11121         ┆ -204       ┆ -27           ┆ -626        ┆ 0       │\n",
+       "│ 2025-05-01 ┆ null           ┆ 1943          ┆ -2027      ┆ -139          ┆ -605        ┆ 3       │\n",
+       "│ 2025-05-29 ┆ null           ┆ 1036          ┆ -372       ┆ -3            ┆ -34         ┆ 3       │\n",
+       "│ 2025-05-30 ┆ null           ┆ 1309          ┆ -1095      ┆ -24           ┆ -441        ┆ 4       │\n",
+       "│ 2025-06-09 ┆ null           ┆ 10434         ┆ -290       ┆ -6            ┆ -489        ┆ 0       │\n",
+       "│ 2025-08-01 ┆ null           ┆ null          ┆ -421       ┆ -1            ┆ -19         ┆ 4       │\n",
+       "│ 2025-08-15 ┆ -2             ┆ null          ┆ -318       ┆ -145          ┆ -154        ┆ 4       │\n",
+       "└────────────┴────────────────┴───────────────┴────────────┴───────────────┴─────────────┴─────────┘"
       ]
      },
      "execution_count": 13,
@@ -494,7 +485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "b8c73b52",
    "metadata": {},
    "outputs": [
@@ -504,7 +495,7 @@
        "(datetime.timedelta(days=-224), 225)"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
