--- a/notebooks/evaluation.ipynb
+++ b/notebooks/evaluation.ipynb
@@ -2,19 +2,10 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "id": "7d7ab4e4",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "%load_ext autoreload\n",
     "%autoreload 2"
@@ -22,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "id": "27e29059",
    "metadata": {},
    "outputs": [],
@@ -36,13 +27,13 @@
     "sys.path.append(\"../\")\n",
     "from src.data_loader import load_as_sales_data\n",
     "from src.data_features import build_features\n",
-    "from src.model import cross_validate_model\n",
+    "from src.model_utils import cross_validate_model\n",
     "from src.evaluation import evaluate_cross_val"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "4548d7c5",
    "metadata": {},
    "outputs": [
@@ -52,7 +43,7 @@
        "((30, 12), (30, 7))"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 4,
    "id": "1f089817",
    "metadata": {},
    "outputs": [
@@ -104,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "id": "0e8f6254",
    "metadata": {},
    "outputs": [
@@ -117,7 +108,7 @@
        " 'AVG': {'RMSE': 1392.983766559044, 'MAPE': 2.261389633822744}}"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,7 +122,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "id": "9a50f26d",
    "metadata": {},
    "outputs": [
@@ -144,7 +135,7 @@
        " 'AVG': {'RMSE': 596.3259211939858, 'MAPE': 0.15934312335728038}}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "id": "fbd0f748",
    "metadata": {},
    "outputs": [
@@ -170,7 +161,7 @@
        " 'AVG': {'RMSE': 296.19696108195825, 'MAPE': 0.0907124020763344}}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "3c1ace5d",
    "metadata": {},
    "outputs": [
